--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kon-test-frontend",
   "version": "0.1.0",
+  "homepage": "https://IndraPratamaLin.github.io/ReactToGsheet",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -19,6 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
